--- a/readme-md.ipynb
+++ b/readme-md.ipynb
@@ -26,12 +26,12 @@
       "both python and bash) for computing features only. The software was tested on", 
       "Ubuntu 12.04.03 with the libraries mentioned as follows. ", 
       "", 
-      "[ImageMagick](http://www.imagemagick.org/script/install-source.php): Version 6.8.1 Q16", 
+      "ImageMagick (http://www.imagemagick.org/script/install-source.php): Version 6.8.1 Q16", 
       "g++: Version 4.6.3", 
-      "[Boost](http://www.boost.org/): Version 1.46", 
-      "[Eigen](http://eigen.tuxfamily.org): Version 2.0 (included in this distribution)", 
-      "[MPI_KMEANS](http://mloss.org/software/view/48/): Version 1.5 (included in this distribution)", 
-      "", 
+      "Boost (http://www.boost.org/): Version 1.46", 
+      "Eigen (http://eigen.tuxfamily.org): Version 2.0 (included in this distribution)", 
+      "MPI_KMEANS (http://mloss.org/software/view/48/): Version 1.5 (included in this distribution)", 
+      "IPython (http://ipython.org): Version 0.12.1 (optional for notebooks)", 
       "", 
       "There may be compatibility issues with other versions of libraries.", 
       "", 
@@ -55,11 +55,10 @@
       "[1]. S. Hussain and B. Triggs, \"Visual Recognition using Local Quantized", 
       "     Patterns\", In 12th European Conference on Computer Vision (ECCV), 2012.  ", 
       "[2]. S. Hussain, T. Napoleon and F. Jurie, \"Face Recognition using Local", 
-      "     Quantized Patterns\", In 23rd British Machine Vision Conference (BMVC), 2012.", 
+      "     Quantized Patterns\", In 23rd British Machine Vision Conference (BMVC), 2012.  ", 
       "[3]. S. Hussain, \"Machine Learning Methods for Visual Object Detection\", PhD Thesis", 
       "     University of Grenoble, 2011.", 
-      "", 
-      "", 
+      "    ", 
       "Software Requirements:", 
       "======================", 
       "Although we have successfully tested this system on Ubuntu 12.04.03 however it", 
@@ -91,10 +90,10 @@
       "Compiling", 
       "============", 
       "1. To compile, call the make in features directory, i.e.", 
-      " ```cd features", 
+      " cd features", 
       " make all ", 
       "  or", 
-      " make -j all (to compile the files in parallel in multi-processor setup)```", 
+      " make -j all (to compile the files in parallel in multi-processor setup)", 
       "", 
       "2. On successful completion executable file named mainFeatures will be generated", 
       "and can be located in the build directory. Help on all the available options can", 
@@ -102,7 +101,8 @@
       "", 
       "Basic Usage", 
       "=============", 
-      "1.Bash (For Computing Features only):", 
+      "1. Bash (For Computing Features only):", 
+      "--------------------------------------", 
       "", 
       "To compute the features (with default parameters) simply call computeFeatures.sh", 
       "providing features type (LQP, LBP or LTP) and files containing list of images", 
@@ -121,41 +121,62 @@
       "in face-rec/code/trainAndEvaluateLFW.py).", 
       "", 
       "2. Python (Both for features computation and face-verification)", 
-      "", 
+      "---------------------------------------------------------------", 
       "    1. Requirements:", 
-      "    For Python code to work, you will need to install following scientific packages:", 
-      "    numpy, scipy and matplotlib (On Ubuntu: sudo apt-get install python-scipy", 
-      "    python-numpy python-matplotlib; note that Fedora needs both python-matplotlib", 
-      "    and python-matplotlib-tk RPM's).", 
+      "For Python code to work, you will need to install following scientific packages:", 
+      "numpy, scipy and matplotlib (On Ubuntu: sudo apt-get install python-scipy", 
+      "python-numpy python-matplotlib; note that Fedora needs both python-matplotlib", 
+      "and python-matplotlib-tk RPM's).", 
+      "", 
+      "", 
       "    2. Usage:", 
-      "    We provide the complete python code for our face-verification algorithm [2], the", 
-      "    code can be found in face-rec directory. Further information can be obtained by", 
-      "    reading the configuration file ('config.py') in the face-rec directory. To use", 
-      "    the code you will need to download any of the LFW aligned version --- although", 
-      "    our code have been extensively tested with following version", 
-      "    (http://www.openu.ac.il/home/hassner/data/lfwa/), however it also works out of", 
-      "    box for the recently released deeply-funnelled version --- and extract it", 
-      "    somewhere on your hard disk. Next, you will need to update the first two", 
-      "    variables (idir and odir) in 'config.py' by pointing them to the respective", 
-      "    path. Once done simply 'cd' to code directory and execute the 'run.py' script by", 
-      "    giving it path of configuration file. i.e.", 
+      "We provide the complete python code for our face-verification algorithm [2], the", 
+      "code can be found in face-rec directory. Further information can be obtained by", 
+      "reading the configuration file ('config.py') in the face-rec directory. To use", 
+      "the code you will need to download any of the LFW aligned version --- although", 
+      "our code have been extensively tested with following version", 
+      "(http://www.openu.ac.il/home/hassner/data/lfwa/), however it also works out of", 
+      "box for the recently released deeply-funnelled version --- and extract it", 
+      "somewhere on your hard disk. Next, you will need to update the first two", 
+      "variables (idir and odir) in 'config.py' by pointing them to the respective", 
+      "path. Once done simply 'cd' to code directory and execute the 'run.py' script by", 
+      "giving it path of configuration file. i.e.", 
       "", 
-      "    ``` python run.py --configfile=../config.py ```", 
+      "python run.py --configfile=../config.py", 
       "", 
-      "    On successful completion computed features can be located in directory", 
-      "    'odir/features', whereas learned models on different feature types with", 
-      "    different parameters can be located 'odir/features/data'. Learned models are", 
-      "    numpy binary files and can be loaded into python by calling load function of", 
-      "    numpy.", 
-      "    ", 
-      "    For computing features only, you can either configure config.py or call run.py", 
-      "    with command line arguments. Call run.py with '--help' flag to see all the available", 
-      "    command line options.", 
-      "    ", 
-      "    However before running through set of experiments we recommend you to run", 
-      "    the test script. This script will hopefully enable you to find out potential", 
-      "    problems (if any) with your installation. See the 'test.py' for further details", 
-      "    and options. ", 
+      "On successful completion computed features can be located in directory", 
+      "'odir/features', whereas learned models on different feature types with", 
+      "different parameters can be located 'odir/features/data'. Learned models are", 
+      "numpy binary files and can be loaded into python by calling load function of", 
+      "numpy. Apart from config.py, there are other example configuration files that", 
+      "can be found in the same directory.", 
+      "", 
+      "For computing features only, you can either configure config.py or call run.py", 
+      "with command line arguments. Call run.py with '--help' flag to see all the", 
+      "available command line options.", 
+      "", 
+      "    3. Demo ", 
+      "However before running a thorough set of experiments we recommend you to run", 
+      "the demo script, i.e.", 
+      "", 
+      "python demo.py path_to_output_dir path_to_LFWA_images_folder number_of_experiments", 
+      "", 
+      "E.g.", 
+      "", 
+      "python demo.py /tmp/experiments /data/lfwa 2", 
+      "", 
+      "This script will hopefully enable you to find out potential problems (if any)", 
+      "with your installation. This demo script will (by default) run three experiments", 
+      "using LTP features. Note that running the complete demo program requires a", 
+      "system with 3Gb memory and takes around 1.5 hours on an i7 machine. Running only", 
+      "two experiments takes around 8 minutes. See 'demo.py' for further details and", 
+      "options. ", 
+      "", 
+      "Once done you can run the demo notebook (demo.ipynb) to visualize the results.  ", 
+      "", 
+      "You can visualize the demo results directly without running the experiments by", 
+      "either running the demo-nb.html or running the provided demo notebook. We also provide", 
+      "some excerpts from our experiments notebook (see feat-exp-nb.html).", 
       "", 
       "Acknowledgements:", 
       "=================", 
