--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,7 +9,7 @@
     {
      "cell_type": "markdown", 
      "source": [
-      "#Demo Results"
+      "#Experiment Results On LFWa"
      ]
     }, 
     {
@@ -42,7 +42,7 @@
        ]
       }
      ], 
-     "prompt_number": 8
+     "prompt_number": 2
     }, 
     {
      "cell_type": "markdown", 
@@ -87,8 +87,7 @@
      "input": [
       "# Withoutout PCA and Chi-Square Simpilarlity on View1", 
       "v2s=np.load(odir+'features/LTP-tolerance=5/data/view1-LTP-chi-square-simple-threshold-model-results.npy')", 
-      "print v2s", 
-      "print 'Average Accuracy of Simple Model (Without PCA, Chi-Square Distance) on View1 = %0.2f'%(np.mean(v2s)*100)"
+      "print 'Accuracy of Simple Model (Without PCA, Chi-Square Distance) on View1 = %0.2f'%((v2s)*100)"
      ], 
      "language": "python", 
      "outputs": [
@@ -96,8 +95,7 @@
        "output_type": "stream", 
        "stream": "stdout", 
        "text": [
-        "0.736", 
-        "Average Accuracy of Simple Model (Without PCA, Chi-Square Distance) on View1 = 73.60"
+        "Accuracy of Simple Model (Without PCA, Chi-Square Distance) on View1 = 73.60"
        ]
       }
      ], 
@@ -176,7 +174,7 @@
       "v2pca=np.load(odir+'features/LTP-tolerance=5/data/view2-LTP-PCA-1000-cosine-results.npy')", 
       "np.set_printoptions(suppress=True)", 
       "print 'Accuracy =', v2pca", 
-      "print 'Average Accuracy With PCA (components = 1000) and cosine Simpilarlity on View2 = %0.2f'%(mean(v2pca[:,1])*100)"
+      "print 'Average Accuracy of Model With PCA (components = 1000) and cosine Simpilarlity on View2 = %0.2f'%(mean(v2pca[:,1])*100)"
      ], 
      "language": "python", 
      "outputs": [
@@ -194,11 +192,11 @@
         " [ 1000.             0.82333333]", 
         " [ 1000.             0.81833333]", 
         " [ 1000.             0.83333333]]", 
-        "Average Accuracy With PCA (components = 1000) and cosine Simpilarlity on View2 = 83.05"
+        "Average Accuracy of Model With PCA (components = 1000) and cosine Simpilarlity on View2 = 83.05"
        ]
       }
      ], 
-     "prompt_number": 6
+     "prompt_number": 4
     }
    ]
   }
