added png.py;removed color support bug resulting from str default value from run.py;replaced .jpg to .png as default image format

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -29,7 +29,7 @@
       "sys.path.insert(0,'./face-rec/code')", 
       "import demo as d", 
       "reload(d)", 
-      "odir,ftype=d.getConfigParameters()", 
+      "odir,ftype=d.getConfigParameters('face-rec/config_LTP_view1_wpca.py')", 
       "print odir, ftype"
      ], 
      "language": "python", 
